# discover-service-k8s

./: .dockerignore  Dockerfile  README.md  pyproject.toml  upgrade.sh
deploy/kubernetes/discover/: Chart.yaml  values.yaml
deploy/kubernetes/discover/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/discover/templates/tests/: test-connection.yaml
src/: ias.py  main.py
src/auth/: auth.py
